@startuml
!include ../style.puml
skinparam arrowThickness 1.1
skinparam classAttributeIconSize 0
hide circle

class Parser LOGIC_COLOR_T1 {
    + {static} parse(input : String) : ParsedCommand
    - {static} parseFlags(argsString : String) : Map<String, String>
}

class ParsedCommand LOGIC_COLOR_T1 {
    + ParsedCommand(commandWord : String, args : Map<String, String>)
}

class InvalidCommandException LOGIC_COLOR_T1 {
}

class MissingArgumentException LOGIC_COLOR_T1 {
}

class ItemTasker LOGIC_COLOR {
    + {static} main(args : String[]) : void
}

Parser ..> ParsedCommand : <<creates>>
Parser ..> InvalidCommandException : <<throws>>
Parser ..> MissingArgumentException : <<throws>>
ItemTasker ..> Parser : <<uses>>
@enduml
